--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.ts",
-    "build":"npx tsc --project ./"
+    "build": "npx tsc --project ./"
   },
   "keywords": [],
   "author": "Adrian",
@@ -14,7 +14,9 @@
   "dependencies": {
     "@types/node": "^16.11.6",
     "dotenv": "^10.0.0",
+    "knex": "^0.95.11",
     "moment": "^2.29.1",
+    "mysql2": "^2.3.2",
     "telegraf": "^4.4.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
